<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:text="@string/tity_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/tity_info"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/entity_name"
            android:layout_weight="2"
            android:text="name"
            style="@style/tity_infoText" />
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/tity_phon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/tity_info"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/entity_phon"
                android:layout_weight="2"
                android:text="phon"
                style="@style/tity_infoText" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/tity_Adr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/tity_info"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/entity_adr"
            android:layout_weight="2"
            android:text="Adrres"
            style="@style/tity_infoText" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/tity_Location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/tity_info"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/entity_Location"
            android:layout_weight="2"
            android:text="Location"
            style="@style/tity_infoText" />

    </LinearLayout>

</LinearLayout>