<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@color/layout_head"
        android:weightSum="10"
        android:layout_height="55dp">

        <Button
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:id="@+id/but_back"
            android:layout_marginTop="6dp"
            android:background="@drawable/abc_ic_ab_back_mtrl_am_alpha"
            android:layout_weight="0.88"/>


        <EditText
            android:layout_width="wrap_content"
            android:inputType="text"
            android:textColor="@color/layout_head"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:id="@+id/edit_Scan"
            android:background="@android:color/white"
            android:hint="查找 设备名称 电话号"
            android:layout_weight="8"
            android:layout_height="35dp"
            android:textSize="18sp" />

        <Button
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:id="@+id/but_go_scan"
            android:layout_marginTop="6dp"
            android:background="@android:drawable/ic_search_category_default"
            android:layout_weight="2"/>


    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/list_scan"
            android:visibility="invisible"
            android:layout_margin="15dp"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/laout_entity"
            android:layout_margin="8dp"
            android:background="@drawable/backgloud">

            <TextView
                android:text="设备详细信息24h轨迹"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal|bold"
                android:textSize="24sp"
                android:layout_marginTop="10dp"
                android:textAlignment="center" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <TextView
                    android:text="设备名称："
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="normal|bold" />

                <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/entity_name"
                    android:textSize="16sp"
                    android:textColor="@color/entity_info" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <TextView
                    android:text="设备电话："
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="normal|bold" />

                <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/entity_phon"
                    android:textSize="16sp"
                    android:textColor="@color/entity_info" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <TextView
                    android:text="所在地址："
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="normal|bold" />

                <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/entity_adderss"
                    android:textSize="16sp"
                    android:textColor="@color/entity_info" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <TextView
                    android:text="最新位置："
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="normal|bold" />

                <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/entity_lng"
                    android:textSize="16sp"
                    android:textColor="@color/entity_info" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <TextView
                    android:text="创建时间："
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="normal|bold" />

                <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/entity_creatTime"
                    android:textSize="16sp"
                    android:textColor="@color/entity_info" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <TextView
                    android:text="修改时间："
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="normal|bold" />

                <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/entity_modifyTime"
                    android:textSize="16sp"
                    android:textColor="@color/entity_info" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <TextView
                    android:text="轨迹里程数："
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="normal|bold" />

                <TextView
                    android:text="123.5km"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_Distancebtn"
                    android:textSize="16sp"
                    android:textColor="@color/entity_info" />

            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <TextView
                    android:text="轨迹起始时间："
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="normal|bold" />

                <Button
                    android:text="2017-08-03 12:35"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_StartTime" />

            </TableRow>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:gravity="center">



                <Button
                    android:text="查看位置"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:id="@+id/btn_goEntity" />

                <Button
                    android:text="查看轨迹"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:id="@+id/btn_goTrace" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:id="@+id/list_entity">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/tityEn_name"
                    style="@style/listHead" />

                <TextView
                    android:text="@string/tityEn_phon"
                    style="@style/listHead" />

                <TextView
                    android:text="@string/tityEn_creatTime"
                    style="@style/listHead" />
            </LinearLayout>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tityEn_list" />

        </LinearLayout>


    </FrameLayout>

</LinearLayout>